--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 th, td {
     padding: 0 20px;
     text-align: left;
-    border-left: 1px solid rgb(168, 168, 168);
-    border-right: 1px solid rgb(168, 168, 168);
+    border: 1px solid rgb(168, 168, 168);
     padding: 10px;
 }
 
